测试依赖注入原理

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
-
 {
     "require":{
-        "monolog/monolog":"1.0.*"
+        "monolog/monolog":"1.0.*",
+        "topthink/think-worker": "^2.0",
+        "workerman/workerman-for-win": "^3.5"
     }
 }
